--- a/filter/pdf.pl.in
+++ b/filter/pdf.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pdf.pl.in,v 1.4 1999-08-27 07:01:10 knok Exp $
+# $Id: pdf.pl.in,v 1.5 1999-08-28 00:07:39 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -28,15 +28,15 @@ use strict;
 require 'util.pl';
 require 'filter.pl';
 
-my $TMPFILE = tmpnam('NMZ.pdf');
-my $TMPFILE2 = tmpnam('NMZ.pdf2');
+my $TMPFILE = util::tmpnam('NMZ.pdf');
+my $TMPFILE2 = util::tmpnam('NMZ.pdf2');
 
 sub mediatype() {
     return ('application/pdf');
 }
 
 sub status() {
-    my $pdfconvpath = checkcmd('pdftotext');
+    my $pdfconvpath = util::checkcmd('pdftotext');
     return 'yes' if (defined $pdfconvpath);
     return 'no';
 }
@@ -53,13 +53,13 @@ sub filter ($$$$$$$) {
     print "Proccessing pdf file ... (use '@PDFTOTEXT_PATH@')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = efopen("> $TMPFILE");
+    my $fh = util::efopen("> $TMPFILE");
     print $fh $$cont;
     undef $fh;
 
     system("@PDFTOTEXT_PATH@ -eucjp $TMPFILE $TMPFILE2");
-    $fh = efopen("< $TMPFILE2");
-    $$cont = readfile($fh);
+    $fh = util::efopen("< $TMPFILE2");
+    $$cont = util::readfile($fh);
     undef $fh;
     unlink($TMPFILE);
     unlink($TMPFILE2);
