--- a/filter/bzip2.pl.in
+++ b/filter/bzip2.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: bzip2.pl.in,v 1.4 1999-08-27 07:01:09 knok Exp $
+# $Id: bzip2.pl.in,v 1.5 1999-08-28 00:07:38 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,14 +27,14 @@ package bzip2;
 use strict;
 require 'util.pl';
 
-my $TMPFILE = tmpnam('NMZ.bzip2');
+my $TMPFILE = util::tmpnam('NMZ.bzip2');
 
 sub mediatype() {
     return ('application/x-bzip2');
 }
 
 sub status() {
-    my $bzip2path = checkcmd('bzip2');
+    my $bzip2path = util::checkcmd('bzip2');
     return 'no' unless (defined $bzip2path);
     return 'yes';
 }
@@ -47,16 +47,16 @@ sub filter ($$$$$$$) {
     my ($orig_cfile, $cont, $weighted_str, $headings, $fields, $size)
       = @_;
 
-    my $bzip2path = checkcmd('bzip2');
+    my $bzip2path = util::checkcmd('bzip2');
 
     print "Proccessing bzip2 file ... (use '$bzip2path')\n"
       if ($conf::VerboseOpt);
 
-    my $fh = efopen("|$bzip2path -cd > $TMPFILE");
+    my $fh = util::efopen("|$bzip2path -cd > $TMPFILE");
     print $fh $$cont;
     undef $fh;
-    $fh = efopen("$TMPFILE");
-    $$cont = readfile($fh);
+    $fh = util::efopen("$TMPFILE");
+    $$cont = util::readfile($fh);
     undef $fh;
     unlink($TMPFILE);
 
