--- a/filter/pdf.pl.in
+++ b/filter/pdf.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pdf.pl.in,v 1.5 1999-08-28 00:07:39 satoru Exp $
+# $Id: pdf.pl.in,v 1.6 1999-08-28 00:19:41 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -26,7 +26,7 @@
 package pdf;
 use strict;
 require 'util.pl';
-require 'filter.pl';
+#require 'filter.pl';
 
 my $TMPFILE = util::tmpnam('NMZ.pdf');
 my $TMPFILE2 = util::tmpnam('NMZ.pdf2');
