--- a/filter/rfc.pl.in
+++ b/filter/rfc.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: rfc.pl.in,v 1.3 1999-08-27 07:01:10 knok Exp $
+# $Id: rfc.pl.in,v 1.4 1999-08-28 00:19:41 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi ,
 #               1999 NOKUBI Takatsugu All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -26,7 +26,7 @@
 package rfc;
 use strict;
 require 'util.pl';
-require 'filter.pl';
+#require 'filter.pl';
 
 sub mediatype() {
     return ('text/plain; x-type=rfc');
@@ -67,7 +67,7 @@ sub rfc_filter ($$$) {
 
     $$contents =~ s/^\s+//s;
     $$contents =~ s/((.+\n)+)\s+(.*)//;
-    my $title = $fields->{title}
+    my $title = $fields->{title};
     $title = $3 if defined $3;
     html::encode_entity($title);
     $fields->{title} = $title;
