--- a/Makefile.in
+++ b/Makefile.in
@@ -55,24 +55,14 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-BZIP2 = @BZIP2@
-BZIP2_PATH = @BZIP2_PATH@
 CC = @CC@
 CHASEN = @CHASEN@
 EXEEXT = @EXEEXT@
 FILE_MMAGIC = @FILE_MMAGIC@
-GROFF = @GROFF@
-GROFF_PATH = @GROFF_PATH@
-GZIP = @GZIP@
-GZIP_PATH = @GZIP_PATH@
 KAKASI = @KAKASI@
 LEX = @LEX@
 LN_S = @LN_S@
-LV = @LV@
-LV_PATH = @LV_PATH@
 MAKEINFO = @MAKEINFO@
-MSWORDVIEW = @MSWORDVIEW@
-MSWORDVIEW_PATH = @MSWORDVIEW_PATH@
 NKF = @NKF@
 OBJEXT = @OBJEXT@
 OPT_ADMIN_EMAIL = @OPT_ADMIN_EMAIL@
@@ -80,25 +70,16 @@ OPT_CGI_LOCATION = @OPT_CGI_LOCATION@
 OPT_LANGUAGE = @OPT_LANGUAGE@
 OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
-PDFTOTEXT = @PDFTOTEXT@
-PDFTOTEXT_PATH = @PDFTOTEXT_PATH@
 PERL = @PERL@
 SCORING = @SCORING@
 VERSION = @VERSION@
-ZCAT = @ZCAT@
-ZCAT_PATH = @ZCAT_PATH@
-application_msword = @application_msword@
-application_pdf = @application_pdf@
-application_x_bzip2 = @application_x_bzip2@
-application_x_compress = @application_x_compress@
-application_x_gzip = @application_x_gzip@
 AUTOMAKE_OPTIONS = no-dependencies
 
 EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic
 EXTRA_DIRS = conf doc etc lib lisp filter template tknamazu
 SUBDIRS = src @FILE_MMAGIC@
 
-CLEANFILES = lib/conf.pl namazu.spec 	     filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl 	     filter/bzip2.pl filter/msword.pl filter/supported.pl 	     File-MMagic/Makefile File-MMagic/pm_to_blib
+CLEANFILES = lib/conf.pl namazu.spec 	     filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl 	     filter/bzip2.pl filter/msword.pl filter/supported.pl 	     File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist lib/var.pl
 
 CLEANDIRS = File-MMagic/blib
 
