Makefile.am (EXTRA_DIST): Add ChangeLog.old.1.gz

--- a/Makefile.in
+++ b/Makefile.in
@@ -75,7 +75,8 @@ SCORING = @SCORING@
 VERSION = @VERSION@
 AUTOMAKE_OPTIONS = no-dependencies
 
-EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic
+EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic 	     ChangeLog.old.1.gz
+
 EXTRA_DIRS = conf doc etc lib lisp filter template tknamazu
 SUBDIRS = src @FILE_MMAGIC@
 
